# matrixcalc

./: .gitignore  matrixcalc.cabal
.stack-work/install/x86_64-linux/lts-5.8/7.10.3/flag-cache/: HUnit-1.3.1.1-9ae4c2f31abd33c594f24f181b5de86a  aeson-0.9.0.1-4453ab568a3a36ce0a973fc6f0305ea4  attoparsec-0.13.0.1-cfe4629e56c04e050b79b0963ae02e38  dlist-0.7.1.2-ff29ea897ce0546ab24638745f33b7b9  hashable-1.2.4.0-53b854df9b1b40e67238bc0b030f3c19  matrixcalc-0.1.0.0-10afea03f7a807b1a4289aad9903d6c3  matrixcalc-0.1.0.0-93f42e46e41b37fd3420144472897f25  matrixcalc-0.1.0.0-a16b41c4ceb3e3225b35e17f9644ecd1  matrixcalc-0.1.0.0-aedc5de0b91efab755c3702b03c81927  matrixcalc-0.1.0.0-d311b8dcc08cacef50ec0bf743ccebcd  matrixcalc-0.1.0.0-d75e51fdac1d252f712f2d9bf294ec67  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2  scientific-0.3.4.6-f4b4ad35acc5673239aad691feea1ca6  text-1.2.2.0-2c09cfae3213a07ad08b7cc1c9a4bb52  unordered-containers-0.2.5.1-1d8b785d5ff15d73cea879f09e714589  vector-0.11.0.0-299aefb173ce5a731565d31f609a0cfd
.stack-work/install/x86_64-linux/lts-5.8/7.10.3/lib/x86_64-linux-ghc-7.10.3/matrixcalc-0.1.0.0-2IzEqcZOQU03B6RfHqNadJ/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-5.8/7.10.3/lib/x86_64-linux-ghc-7.10.3/matrixcalc-0.1.0.0-7454dsSRmakDgQUPLRdi0Q/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-5.8/7.10.3/pkgdb/: matrixcalc-0.1.0.0-d75e51fdac1d252f712f2d9bf294ec67.conf  package.cache
app/: Main.hs
src/: Lib.hs
(+4 files in other folders)
