name:                matrixcalc
version:             0.1.0.0
synopsis:            Test suite for Startup Weekend challenge
description:         Please see README.md
homepage:            http://github.com/matusfi/matrixcalc#readme
license:             BSD3
license-file:        LICENSE
author:              Matus Laslofi
maintainer:          matus.laslofi@gmail..com
copyright:           2016 Matus Laslofi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson -any
                     , bytestring -any
  default-language:    Haskell2010

executable matrixcalc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , matrixcalc
  default-language:    Haskell2010

test-suite matrixcalc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , matrixcalc
                     , HUnit >= 1.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matusfi/matrixcalc
